# Sql-Agent

./: README.md  main.py  pyproject.toml
backend/sqlagent/: .gitignore  manage.py
backend/sqlagent/sql_app/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/sqlagent/sql_app/agent/: graph.py  nodes.py  state.py
backend/sqlagent/sql_app/helper/: csvloader.py  dbconnection.py  embeddings.py  promptbuilder.py  retriever.py  sqlexecutor.py  vectorstore.py
backend/sqlagent/sql_app/migrations/: 0001_initial.py
backend/sqlagent/sqlagent/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/auth/signin/: page.tsx
frontend/components/: Chat.tsx  Onboarding.tsx  ResultTable.tsx  Sidebar.tsx
frontend/lib/: persistence.ts
frontend/types/: index.ts  next-auth.d.ts
